# pagespeak

./: .env.example  .gitignore  .pf-guards.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/workflows/: guards.yml  publish.yml  test.yml
config/: model_router.yaml
docs/: architecture.md  audit.md  backends.md  caching.md  canvas-quizzes.md  choosing-defaults.md  cleanup.md  diagrams.md  docx-backends.md  format-support.md  ingest.md  normalize-headings.md  operations.md  pipeline-cleanup.md  pipeline-decorations.md  pipeline-ingest.md  pipeline-normalize.md  pipeline-repair.md  pipeline-split.md  pipeline-structure.md  pipeline-vision.md  pipeline.md  presets.md  repair-tables.md  tophat-quizzes.md  usage.md  web.md  worked-examples.md
src/pagespeak/: __init__.py  _agent_config.py  _agent_runtime.py  _db.py  model_router.yaml
src/pagespeak/backends/: _docx.py  _docx_dispatch.py  _docx_quality.py  _docx_structured.py  _docx_table.py  _docx_walk.py  _local_images.py  _markdown.py  _pdf.py  _pdf_dispatch.py  _pdf_docling.py  _qti.py  _qti_parse.py  _qti_render.py  _qti_split.py  _remote_images.py  _tophat.py  _tophat_answers.py  _tophat_images.py  _tophat_parse.py  _tophat_render.py
src/pagespeak/cli/: __init__.py  _audit.py  _baseline.py  _convert.py  _deliver.py  _ingest.py  _inherit.py  _invalidate.py  _repair.py  _vision_audit.py
src/pagespeak/models/: _models.py  _pipeline.py  _quiz.py
src/pagespeak/orchestrators/: _chunk.py  _context.py  _dispatch.py  _dispatch_setup.py  _ingest.py  _phase.py  _phases.py  _qti_export.py  _resume.py  _sequencer.py  _split_output.py
src/pagespeak/prompts/: __init__.py  _diagram.py  _heading_normalize.py  _heading_normalize_full.py  _loader.py  diagram.yaml  heading_normalize.yaml  heading_normalize_full.yaml
src/pagespeak/services/: _audit.py  _audit_checks.py  _baseline.py  _baseline_diff.py  _chunk_rewrite.py  _cleanup.py  _cleanup_diagnose.py  _cleanup_html.py  _cleanup_regexes.py  _cleanup_structure.py  _cleanup_transforms.py  _decorations.py  _deliver.py  _diagrams.py  _enumerated_nest.py  _flat_source_demote.py  _fragments.py  _frontmatter.py  _h1_ratio_rebalance.py  _heading_normalize.py  _heading_sanity.py  _image_refs.py  _language.py  _listish_headings.py  _normalize_decision.py  _normalize_heuristic.py  _normalize_llm.py  _normalize_repair.py  _outline.py  _presets.py  _provenance.py  _rerun.py  _run_record.py  _split.py  _split_filter.py  _split_identity.py  _split_pack.py  _split_parse.py  _split_write.py  _table_repair.py  (+8 more)
src/pagespeak/utils/: _html.py  _mathml.py  _phash.py  _prompts.py
src/pagespeak/web/: __init__.py  __main__.py  _command.py  _config.py  _cost.py  _db.py  _jobs.py  _scan.py  _worker.py
src/pagespeak/web/api/: __init__.py  actions.py  pages.py  partials.py
src/pagespeak/web/static/: app.css
src/pagespeak/web/templates/: base.html
src/pagespeak/web/templates/pages/: detail.html  help.html  home.html
src/pagespeak/web/templates/partials/: actions.html  cost_preview.html  image_detail.html  job_status.html  llm.html  phase_strip.html  queue.html
tests/: conftest.py  test_agent_runtime.py  test_agent_runtime_job_id.py  test_audit.py  test_audit_checks.py  test_baseline.py  test_baseline_diff.py  test_chunk.py  test_chunk_rewrite.py  test_cleanup.py  test_cleanup_diagnose.py  test_cleanup_html.py  test_cli.py  test_cli_audit.py  test_cli_baseline.py  test_cli_convert.py  test_cli_ingest.py  test_cli_inherit.py  test_cli_invalidate.py  test_cli_repair.py  test_context.py  test_cost.py  test_db.py  test_decorations.py  test_deliver.py  test_diagrams.py  test_dispatch.py  test_docs_sync.py  test_docx.py  test_docx_dispatch.py  test_docx_quality.py  test_docx_structured.py  test_docx_table.py  test_docx_walk.py  test_enumerated_nest.py  test_flat_source_demote.py  test_fragments.py  test_frontmatter.py  test_h1_ratio_rebalance.py  test_heading_normalize.py  (+60 more)
